# adobe_meta

./: .gitignore  CMakeLists.txt  README.md  adobe_metadata.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/release/: XMPCoreStatic.idb  XMPFilesStatic.idb
